<resources>
    <string name="app_name">Test Jetpack</string>
    <string name="loadingWithThreeDots">Loading…</string>
    <string name="retryWithThreeDots">Retry…</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to SingIn and SingUp and Password Recovery-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_terms_need_accept">Terms accept is required</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="forgot_password_with_question_mark">Forgot password?</string>
    <string name="new_here_sign_up">New here? Sign Up</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="i_accept_the_terms_withstar">I accept the terms*</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="send_email">Send Email</string>

    <!--GitRepoSearch-->
    <string name="hint_repo_to_search">repo to search</string>
    <string name="search">Search</string>

    <!--My Profile-->
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="driver_license">Driver License</string>
    <string name="state_of_issue">State of issue</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="you_currently_have_no_credit_card">You currently have no credit card</string>

    <!--Navigation Menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation menu</string>

    <!--Gps-->
    <string name="menu_item_gps_only">GPS Only</string>
    <string name="menu_item_diagnostic">Diagnostic</string>
    <string name="menu_item_clear_locations">Clear locations</string>
    <string name="location_listener_started">Listener Started</string>
    <string name="location_listener_stopped">Listener Stopped</string>
    <string name="location_listener_start">Start</string>
    <string name="location_listener_stop">Stop</string>
    <string name="gps_diagnostic_switch">diagnostic</string>
    <string name="no_value">none</string>

    <!--My Trip-->
    <string name="title_activity_maps">Map</string>
    <string name="latitude__">latitude (°):</string>
    <string name="longitude__">longitude (°):</string>
    <string name="altitude__">altitude (m):</string>
    <string name="bearing__">bearing (°):</string>
    <string name="speed__">speed (m/c):</string>
    <string name="accuracy__">accuracy (m):</string>
    <string name="vertical_accuracy__">vertical accuracy (m):</string>
    <string name="speed_accuracy__">speed accuracy (m/c):</string>
    <string name="bearing_accuracy__">bearing accuracy (°):</string>
    <string name="time__millis__">time (millis):</string>
    <string name="elapsed_real_time__">elapsed real-time (millis):</string>
    <string name="acceleration__">acceleration (m/c²):</string>
    <string name="satellites__">satellites:</string>

    <!--My Status-->
    <string name="my_status_previous">PREVIOUS</string>
    <string name="my_status_next">NEXT</string>
    <string name="my_status_finish">FINISH</string>
    <string name="dot">.</string>

    <!--Notifications-->
    <string name="notifications_bottomsheed_menu">Menu</string>
    <string name="notifications_bottomsheet_add">add notifications to DB</string>
    <string name="notifications_bottomsheet_clear">clear all notifications from DB</string>
</resources>
