<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.signin.SignInFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.testjetpack.ui.signin.signin.SignInFragmentVM" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary">


        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="@dimen/sign_in_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sign_in_logo_height"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lEmail"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/actvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.email}'
                    app:error='@{viewModel.emailError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lPassword"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lEmail"
                android:hint="@string/password"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/sign_in"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.password}'
                    app:error='@{viewModel.passwordError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSingIn"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_below="@id/lPassword"
                android:layout_marginTop="@dimen/sign_in_top_margins"
                android:text="@string/sign_in"
                app:cornerRadius="16dp"
                app:onClick='@{viewModel::signIn}' />

            <View
                android:id="@+id/separator"
                style="@style/SeparatorStyle"
                android:layout_width="match_parent"
                android:layout_below="@id/bSingIn"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSingInWithFacebook"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator"
                android:layout_marginTop="@dimen/sign_in_top_margins"
                android:text="@string/sign_in_with_facebook"
                app:backgroundTint="@color/facebookButton"
                app:cornerRadius="16dp"
                app:onClick='@{viewModel::signInWithFacebook}' />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSingInWithTwitter"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bSingInWithFacebook"
                android:layout_marginTop="@dimen/sign_in_top_margins"
                android:text="@string/sign_in_with_twitter"
                app:backgroundTint="@color/twitterButton"
                app:cornerRadius="16dp"
                app:onClick='@{viewModel::signInWithTwitter}' />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bSingInWithTwitter"
                android:layout_marginTop="@dimen/sign_in_top_margins">

                <TextView
                    android:id="@+id/tvPasswordForgot"
                    style="@style/DefaultLinkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/forgot_password_with_question_mark"
                    app:onClick='@{viewModel::passwordRecovery}' />

                <TextView
                    android:id="@+id/tvSignUp"
                    style="@style/DefaultLinkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/new_here_sign_up"
                    app:onClick='@{viewModel::register}' />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</layout>