<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.signup.SignUpFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.testjetpack.ui.signin.signup.SignUpFragmentVM" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary">

        <RelativeLayout
            android:layout_width="@dimen/sign_in_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sign_in_logo_height"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tvHeader"
                style="@style/HeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lName"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.name}'
                    app:error='@{viewModel.nameError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lEmail"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/actvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.email}'
                    app:error='@{viewModel.emailError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lPassword"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lEmail"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/register"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.password}'
                    app:error='@{viewModel.passwordError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lConfirmPassword"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lPassword"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/register"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text='@={viewModel.passwordConfirm}'
                    app:error='@{viewModel.confirmPasswordError}' />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/termContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lConfirmPassword">

                <TextView
                    android:id="@+id/tvTerms"
                    style="@style/DefaultLinkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/i_accept_the_terms_withstar"
                    app:error='@{viewModel.termsAcceptanceError}' />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:translationX="22dp"
                    android:checked='@={viewModel.termsAccepted}'
                    app:useMaterialThemeColors="true" />

            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bRegister"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/termContainer"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/register"
                app:cornerRadius="16dp"
                app:onClick='@{viewModel::register}' />

        </RelativeLayout>

    </RelativeLayout>
</layout>