<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signin.passwordrecovery.PasswordRecoveryFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.testjetpack.ui.signin.passwordrecovery.PasswordRecoveryFragmentVM" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary">

        <RelativeLayout
            android:layout_width="@dimen/sign_in_width"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/sign_in_logo_height"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tvHeader"
                style="@style/HeaderText"
                android:textAllCaps="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:layout_below="@id/icon"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lEmail"
                style="@style/TextInputLayoutOutlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvHeader"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/actvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text='@={viewModel.email}'
                    app:error='@{viewModel.emailError}'/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSendEmail"
                style="@style/MaterialButton"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/send_email"
                android:layout_below="@id/lEmail"
                app:onClick='@{viewModel::recover}'/>

        </RelativeLayout>

    </RelativeLayout>
</layout>